--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ main{
 }
 /* ---------------------------------------------------- */
 .catchcopy-container{
-  /* height:45vw; */
+  height:30vw;
   /* background:cornflowerblue; */
 }
   .catchcopy-contents{
@@ -44,20 +44,20 @@ main{
   }
 
     .catchcopy-img{
-      /* position: absolute;
-      left: 40vw; */
-      margin-left: 40vw;
+      position: absolute;
+      left: 40vw;
+      /* margin-left: 40vw; */
     }
       .catchcopy-img img{
         width: 60vw;
       }
 
     .catchcopy-string{
-      /* position: absolute;
+      position: absolute;
       left: 20vw;
-      width: 500px; */
-      margin-top: -500px;
-      margin-left: 20vw;
+      /* width: 500px; */
+      /* margin-top: -500px;
+      margin-left: 20vw; */
     }
       .catchcopy-string-e{
         font-size: 65px;
@@ -217,21 +217,25 @@ main{
       background-color: #B31667;
       grid-column: 1/2;
       grid-row: 1/3;
-      display: grid;
-      place-items: center;
+      /* display: grid; */
+      /* place-items: center; */
     }
       .service-contents-chilled-1-img{
-        margin-top: -30px;
+        /* margin-top: -30px; */
+        margin:10px auto;
         width: 10vw;
       }
       .service-contents-chilled-1-string{
         text-align: left;
         width: 27vw;
         line-height: 30px;
-        margin-top: -100px;
+        /* margin-top: -100px; */
+        margin: 0 auto;
       }
         .service-contents-chilled-1-string1{
           text-align: center;
+        }
+        .service-contents-chilled-1-string2{
         }
 
     .service-contents-chilled-2{
@@ -247,11 +251,14 @@ main{
       .service-contents-chilled-2-string{
         text-align: left;
         width: 20vw;
-        line-height: 30px;
-        margin: 35px;
+        line-height: 2vw;
+        margin: 3vw;
+        font-size: 14px;
       }
         .service-contents-chilled-2-string1{
           text-align: left;
+        }
+        .service-contents-chilled-2-string2{
         }
 
     .service-contents-chilled-3{
@@ -267,11 +274,14 @@ main{
       .service-contents-chilled-3-string{
         text-align: left;
         width: 20vw;
-        line-height: 30px;
-        margin: 35px;
+        line-height: 2vw;
+        margin: 3vw;
+        font-size: 14px;
       }
         .service-contents-chilled-3-string1{
           text-align: left;
+        }
+        .service-contents-chilled-3-string2{
         }
 
         
@@ -328,14 +338,16 @@ main{
         .blog-card-contents{
           padding: 20px 20px;
         }
-        .blog-card-note{
-          line-height: 25px;
-          text-align: center;
-        }
+          .blog-card-note{
+            line-height: 25px;
+            text-align: center;
+          }
         .blog-cardtag{
           padding: 30px 0 0;
+          margin: 0 10px 20px;
           display: flex;
           justify-content: space-between;
+          font-size: 14px;
         }
           .blog-cardtag-date{
           }
@@ -487,5 +499,5 @@ main{
   background-color: #F5F5F5;
   margin: 50px 0 0;
   height: 80px;
-    font-size: 15px;
+  font-size: 15px;
 }
